--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
           </ul>
           <ul class="header-contacts">
             <li>
+              <svg>
+                <use></use>
+              </svg>
+
               <a href="mailto:info@devstudio.com" class="header-contacts-item"
                 >info@devstudio.com</a
               >
