upd index, styles

--- a/index.html
+++ b/index.html
@@ -29,15 +29,19 @@
           </ul>
           <ul class="header-contacts">
             <li>
-              <svg>
-                <use></use>
+              <svg class="icon-mail" width="16" height="12">
+                <use href="./images/icons/symbol-defs.svg#icon-envelope"></use>
               </svg>
-
-              <a href="mailto:info@devstudio.com" class="header-contacts-item"
-                >info@devstudio.com</a
+              <a href="mailto:info@devstudio.com" class="header-contacts-item">
+                info@devstudio.com</a
               >
             </li>
             <li>
+              <svg class="icon-smartphone" width="10" height="16">
+                <use
+                  href="./images/icons/symbol-defs.svg#icon-smartphone"
+                ></use>
+              </svg>
               <a href="tel:+380961111111" class="header-contacts-item"
                 >+38 096 111 11 11</a
               >
@@ -63,6 +67,11 @@
         <h2 class="visually-hidden">Наши преимущества</h2>
         <ul class="advantages-section-list">
           <li>
+            <div class="icon-advantages-wrapper">
+              <svg class="icon-advantages" width="70" height="70">
+                <use href="./images/icons/symbol-defs.svg#icon-antenna-1"></use>
+              </svg>
+            </div>
             <h3 class="advantages-section-title">Внимание к деталям</h3>
             <p class="advantages-section-text">
               Идейные соображения, а также начало повседневной работы по
@@ -70,6 +79,11 @@
             </p>
           </li>
           <li>
+            <div class="icon-advantages-wrapper">
+              <svg class="icon-advantages" width="70" height="70">
+                <use href="./images/icons/symbol-defs.svg#icon-clock-1"></use>
+              </svg>
+            </div>
             <h3 class="advantages-section-title">Пунктуальность</h3>
             <p class="advantages-section-text">
               Задача организации, в особенности же рамки и место обучения кадров
@@ -77,6 +91,11 @@
             </p>
           </li>
           <li>
+            <div class="icon-advantages-wrapper">
+              <svg class="icon-advantages" width="70" height="70">
+                <use href="./images/icons/symbol-defs.svg#icon-diagram-1"></use>
+              </svg>
+            </div>
             <h3 class="advantages-section-title">Планирование</h3>
             <p class="advantages-section-text">
               Равным образом консультация с широким активом в значительной
@@ -84,6 +103,13 @@
             </p>
           </li>
           <li>
+            <div class="icon-advantages-wrapper">
+              <svg class="icon-advantages" width="70" height="70">
+                <use
+                  href="./images/icons/symbol-defs.svg#icon-astronaut-1"
+                ></use>
+              </svg>
+            </div>
             <h3 class="advantages-section-title">Современные технологии</h3>
             <p class="advantages-section-text">
               Значимость этих проблем настолько очевидна, что реализация
@@ -124,6 +150,44 @@
                 <h3 class="team-section-name">Игорь Демьяненко</h3>
                 <p class="team-section-position">Product Designer</p>
               </div>
+              <ul class="team-social-list">
+                <li class="team-social-item">
+                  <a href="#" class="team-social-link">
+                    <svg>
+                      <use
+                        href="./images/icons/symbol-defs.svg#icon-instagram-2"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-item">
+                  <a href="#" class="team-social-link">
+                    <svg>
+                      <use
+                        href="./images/icons/symbol-defs.svg#icon-twitter-1"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-item">
+                  <a href="#" class="team-social-link">
+                    <svg>
+                      <use
+                        href="./images/icons/symbol-defs.svg#icon-facebook-1"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-item">
+                  <a href="#" class="team-social-link">
+                    <svg>
+                      <use
+                        href="./images/icons/symbol-defs.svg#icon-linkedin-1"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team-section-item">
               <img src="./images/orepina.jpg" alt="Ольга Репина" width="270" />
@@ -131,6 +195,44 @@
                 <h3 class="team-section-name">Ольга Репина</h3>
                 <p class="team-section-position">Frontend Developer</p>
               </div>
+              <ul class="team-social-list">
+                <li class="team-social-item">
+                  <a href="#" class="team-social-link">
+                    <svg>
+                      <use
+                        href="./images/icons/symbol-defs.svg#icon-instagram-2"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-item">
+                  <a href="#" class="team-social-link">
+                    <svg>
+                      <use
+                        href="./images/icons/symbol-defs.svg#icon-twitter-1"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-item">
+                  <a href="#" class="team-social-link">
+                    <svg>
+                      <use
+                        href="./images/icons/symbol-defs.svg#icon-facebook-1"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-item">
+                  <a href="#" class="team-social-link">
+                    <svg>
+                      <use
+                        href="./images/icons/symbol-defs.svg#icon-linkedin-1"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team-section-item">
               <img
@@ -142,6 +244,44 @@
                 <h3 class="team-section-name">Николай Тарасов</h3>
                 <p class="team-section-position">Marketing</p>
               </div>
+              <ul class="team-social-list">
+                <li class="team-social-item">
+                  <a href="#" class="team-social-link">
+                    <svg>
+                      <use
+                        href="./images/icons/symbol-defs.svg#icon-instagram-2"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-item">
+                  <a href="#" class="team-social-link">
+                    <svg>
+                      <use
+                        href="./images/icons/symbol-defs.svg#icon-twitter-1"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-item">
+                  <a href="#" class="team-social-link">
+                    <svg>
+                      <use
+                        href="./images/icons/symbol-defs.svg#icon-facebook-1"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-item">
+                  <a href="#" class="team-social-link">
+                    <svg>
+                      <use
+                        href="./images/icons/symbol-defs.svg#icon-linkedin-1"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team-section-item">
               <img
@@ -152,6 +292,119 @@
               <div class="team-section-text">
                 <h3 class="team-section-name">Михаил Ермаков</h3>
                 <p class="team-section-position">UI Designer</p>
+              </div>
+              <ul class="team-social-list">
+                <li class="team-social-item">
+                  <a href="#" class="team-social-link">
+                    <svg>
+                      <use
+                        href="./images/icons/symbol-defs.svg#icon-instagram-2"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-item">
+                  <a href="#" class="team-social-link">
+                    <svg>
+                      <use
+                        href="./images/icons/symbol-defs.svg#icon-twitter-1"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-item">
+                  <a href="#" class="team-social-link">
+                    <svg>
+                      <use
+                        href="./images/icons/symbol-defs.svg#icon-facebook-1"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-social-item">
+                  <a href="#" class="team-social-link">
+                    <svg>
+                      <use
+                        href="./images/icons/symbol-defs.svg#icon-linkedin-1"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- СЕКЦИЯ ПОСТОЯННЫЕ КЛИЕНТЫ -->
+      <section class="regular-customers">
+        <div class="container">
+          <h2 class="section-title">Постоянные клиенты</h2>
+          <ul class="regular-list">
+            <li>
+              <div class="icon-regular-wrapper">
+                <a href="#">
+                  <svg class="icon-regular" width="44" height="49">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-logo-1"
+                    ></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li>
+              <div class="icon-regular-wrapper">
+                <a href="#">
+                  <svg class="icon-regular" width="40" height="52">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-logo-2"
+                    ></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li>
+              <div class="icon-regular-wrapper">
+                <a href="#">
+                  <svg class="icon-regular" width="41" height="43">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-logo-3"
+                    ></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li>
+              <div class="icon-regular-wrapper">
+                <a href="#">
+                  <svg class="icon-regular" width="80" height="42">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-logo-4"
+                    ></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li>
+              <div class="icon-regular-wrapper">
+                <a href="#">
+                  <svg class="icon-regular" width="59" height="47">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-logo-5"
+                    ></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li>
+              <div class="icon-regular-wrapper">
+                <a href="#">
+                  <svg class="icon-regular" width="88" height="45">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-logo-6"
+                    ></use>
+                  </svg>
+                </a>
               </div>
             </li>
           </ul>
