--- a/index.html
+++ b/index.html
@@ -342,20 +342,16 @@
           <h2 class="section-title">Постоянные клиенты</h2>
           <ul class="regular-list">
             <li>
-              <div class="icon-regular-wrapper">
-                <a href="#">
-                  <svg class="icon-regular" width="44" height="49">
-                    <use
-                      href="./images/icons/symbol-defs.svg#icon-logo-1"
-                    ></use>
-                  </svg>
-                </a>
-              </div>
+              <a href="#" class="regular-link">
+                <svg width="44" height="49">
+                  <use href="./images/icons/symbol-defs.svg#icon-logo-1"></use>
+                </svg>
+              </a>
             </li>
             <li>
               <div class="icon-regular-wrapper">
-                <a href="#">
-                  <svg class="icon-regular" width="40" height="52">
+                <a href="#" class="regular-link">
+                  <svg width="40" height="52">
                     <use
                       href="./images/icons/symbol-defs.svg#icon-logo-2"
                     ></use>
@@ -365,8 +361,8 @@
             </li>
             <li>
               <div class="icon-regular-wrapper">
-                <a href="#">
-                  <svg class="icon-regular" width="41" height="43">
+                <a href="#" class="regular-link">
+                  <svg width="41" height="43">
                     <use
                       href="./images/icons/symbol-defs.svg#icon-logo-3"
                     ></use>
@@ -376,8 +372,8 @@
             </li>
             <li>
               <div class="icon-regular-wrapper">
-                <a href="#">
-                  <svg class="icon-regular" width="80" height="42">
+                <a href="#" class="regular-link">
+                  <svg width="80" height="42">
                     <use
                       href="./images/icons/symbol-defs.svg#icon-logo-4"
                     ></use>
@@ -387,8 +383,8 @@
             </li>
             <li>
               <div class="icon-regular-wrapper">
-                <a href="#">
-                  <svg class="icon-regular" width="59" height="47">
+                <a href="#" class="regular-link">
+                  <svg width="59" height="47">
                     <use
                       href="./images/icons/symbol-defs.svg#icon-logo-5"
                     ></use>
@@ -398,8 +394,8 @@
             </li>
             <li>
               <div class="icon-regular-wrapper">
-                <a href="#">
-                  <svg class="icon-regular" width="88" height="45">
+                <a href="#" class="regular-link">
+                  <svg width="88" height="45">
                     <use
                       href="./images/icons/symbol-defs.svg#icon-logo-6"
                     ></use>
