--- a/portfolio.html
+++ b/portfolio.html
@@ -30,11 +30,19 @@
           </ul>
           <ul class="header-contacts">
             <li>
-              <a href="mailto:info@devstudio.com" class="header-contacts-item"
-                >info@devstudio.com</a
+              <svg class="icon-mail" width="16" height="12">
+                <use href="./images/icons/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              <a href="mailto:info@devstudio.com" class="header-contacts-item">
+                info@devstudio.com</a
               >
             </li>
             <li>
+              <svg class="icon-smartphone" width="10" height="16">
+                <use
+                  href="./images/icons/symbol-defs.svg#icon-smartphone"
+                ></use>
+              </svg>
               <a href="tel:+380961111111" class="header-contacts-item"
                 >+38 096 111 11 11</a
               >
