upd index, portfolio, styles

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               <ul class="team-social-list">
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg>
+                    <svg width="44" height="44">
                       <use
                         href="./images/icons/symbol-defs.svg#icon-instagram-2"
                       ></use>
@@ -162,7 +162,7 @@
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg>
+                    <svg width="44" height="44">
                       <use
                         href="./images/icons/symbol-defs.svg#icon-twitter-1"
                       ></use>
@@ -171,7 +171,7 @@
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg>
+                    <svg width="44" height="44">
                       <use
                         href="./images/icons/symbol-defs.svg#icon-facebook-1"
                       ></use>
@@ -180,7 +180,7 @@
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg>
+                    <svg width="44" height="44">
                       <use
                         href="./images/icons/symbol-defs.svg#icon-linkedin-1"
                       ></use>
@@ -198,7 +198,7 @@
               <ul class="team-social-list">
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg>
+                    <svg width="44" height="44">
                       <use
                         href="./images/icons/symbol-defs.svg#icon-instagram-2"
                       ></use>
@@ -207,7 +207,7 @@
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg>
+                    <svg width="44" height="44">
                       <use
                         href="./images/icons/symbol-defs.svg#icon-twitter-1"
                       ></use>
@@ -216,7 +216,7 @@
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg>
+                    <svg width="44" height="44">
                       <use
                         href="./images/icons/symbol-defs.svg#icon-facebook-1"
                       ></use>
@@ -225,7 +225,7 @@
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg>
+                    <svg width="44" height="44">
                       <use
                         href="./images/icons/symbol-defs.svg#icon-linkedin-1"
                       ></use>
@@ -247,7 +247,7 @@
               <ul class="team-social-list">
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg>
+                    <svg width="44" height="44">
                       <use
                         href="./images/icons/symbol-defs.svg#icon-instagram-2"
                       ></use>
@@ -256,7 +256,7 @@
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg>
+                    <svg width="44" height="44">
                       <use
                         href="./images/icons/symbol-defs.svg#icon-twitter-1"
                       ></use>
@@ -265,7 +265,7 @@
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg>
+                    <svg width="44" height="44">
                       <use
                         href="./images/icons/symbol-defs.svg#icon-facebook-1"
                       ></use>
@@ -274,7 +274,7 @@
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg>
+                    <svg width="44" height="44">
                       <use
                         href="./images/icons/symbol-defs.svg#icon-linkedin-1"
                       ></use>
@@ -296,7 +296,7 @@
               <ul class="team-social-list">
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg>
+                    <svg width="44" height="44">
                       <use
                         href="./images/icons/symbol-defs.svg#icon-instagram-2"
                       ></use>
@@ -305,7 +305,7 @@
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg>
+                    <svg width="44" height="44">
                       <use
                         href="./images/icons/symbol-defs.svg#icon-twitter-1"
                       ></use>
@@ -314,7 +314,7 @@
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg>
+                    <svg width="44" height="44">
                       <use
                         href="./images/icons/symbol-defs.svg#icon-facebook-1"
                       ></use>
@@ -323,7 +323,7 @@
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg>
+                    <svg width="44" height="44">
                       <use
                         href="./images/icons/symbol-defs.svg#icon-linkedin-1"
                       ></use>
@@ -411,18 +411,61 @@
     <!-- footer -->
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo-link-footer"
-          ><span class="logo-link-part">Web</span>Studio</a
-        >
-        <address class="footer-address">
-          <p class="footer-location-text">г. Киев, пр-т Леси Украинки, 26</p>
-          <a href="mailto:info@example.com" class="footer-contacts"
-            >info@example.com</a
+        <div class="footer-contacts-wrapper">
+          <a href="./index.html" class="logo-link-footer"
+            ><span class="logo-link-part">Web</span>Studio</a
           >
-          <a href="tel:+380991111111" class="footer-contacts"
-            >+38 099 111 11 11</a
-          >
-        </address>
+          <address class="footer-address">
+            <p class="footer-location-text">г. Киев, пр-т Леси Украинки, 26</p>
+            <a href="mailto:info@example.com" class="footer-contacts"
+              >info@example.com</a
+            >
+            <a href="tel:+380991111111" class="footer-contacts"
+              >+38 099 111 11 11</a
+            >
+          </address>
+        </div>
+        <div class="footer-join">
+          <h3>Присоединяйтесь</h3>
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+              <a href="#" class="footer-social-link">
+                <svg width="44" height="44">
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-instagram-2"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="#" class="footer-social-link">
+                <svg width="44" height="44">
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-twitter-1"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="#" class="footer-social-link">
+                <svg width="44" height="44">
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-facebook-1"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="#" class="footer-social-link">
+                <svg width="44" height="44">
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-linkedin-1"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
