--- a/portfolio.html
+++ b/portfolio.html
@@ -72,87 +72,107 @@
         <!-- карточки примеров работ -->
         <ul class="card-set">
           <li class="card-set-item">
-            <img src="./images/technocryak.jpg" alt="Технокряк" width="370" />
-            <div class="card-set-text">
-              <h2 class="works-cart-title">Технокряк</h2>
-              <p class="works-cart-text">Веб-сайт</p>
-            </div>
+            <a href="#">
+              <img src="./images/technocryak.jpg" alt="Технокряк" width="370" />
+              <div class="card-set-text">
+                <h2 class="works-cart-title">Технокряк</h2>
+                <p class="works-cart-text">Веб-сайт</p>
+              </div>
+            </a>
           </li>
           <li class="card-set-item">
-            <img
-              src="./images/neworleangoldenstar.jpg"
-              alt="Постер New Orlean vs Golden Star"
-              width="370"
-            />
-            <div class="card-set-text">
-              <h2 class="works-cart-title">Постер New Orlean vs Golden Star</h2>
-              <p class="works-cart-text">Дизайн</p>
-            </div>
+            <a href="#">
+              <img
+                src="./images/neworleangoldenstar.jpg"
+                alt="Постер New Orlean vs Golden Star"
+                width="370"
+              />
+              <div class="card-set-text">
+                <h2 class="works-cart-title">
+                  Постер New Orlean vs Golden Star
+                </h2>
+                <p class="works-cart-text">Дизайн</p>
+              </div>
+            </a>
           </li>
           <li class="card-set-item">
-            <img
-              src="./images/seafood.jpg"
-              alt="Ресторан Seafood"
-              width="370"
-            />
-            <div class="card-set-text">
-              <h2 class="works-cart-title">Ресторан Seafood</h2>
-              <p class="works-cart-text">Приложение</p>
-            </div>
+            <a href="">
+              <img
+                src="./images/seafood.jpg"
+                alt="Ресторан Seafood"
+                width="370"
+              />
+              <div class="card-set-text">
+                <h2 class="works-cart-title">Ресторан Seafood</h2>
+                <p class="works-cart-text">Приложение</p>
+              </div>
+            </a>
           </li>
           <li class="card-set-item">
-            <img src="./images/prime.jpg" alt="Проект Prime" width="370" />
-            <div class="card-set-text">
-              <h2 class="works-cart-title">Проект Prime</h2>
-              <p class="works-cart-text">Маркетинг</p>
-            </div>
+            <a href="#">
+              <img src="./images/prime.jpg" alt="Проект Prime" width="370" />
+              <div class="card-set-text">
+                <h2 class="works-cart-title">Проект Prime</h2>
+                <p class="works-cart-text">Маркетинг</p>
+              </div>
+            </a>
           </li>
           <li class="card-set-item">
-            <img src="./images/boxes.jpg" alt="Проект Boxes" width="370" />
-            <div class="card-set-text">
-              <h2 class="works-cart-title">Проект Boxes</h2>
-              <p class="works-cart-text">Приложение</p>
-            </div>
+            <a href="#">
+              <img src="./images/boxes.jpg" alt="Проект Boxes" width="370" />
+              <div class="card-set-text">
+                <h2 class="works-cart-title">Проект Boxes</h2>
+                <p class="works-cart-text">Приложение</p>
+              </div>
+            </a>
           </li>
           <li class="card-set-item">
-            <img
-              src="./images/inspirationhasnoborders.jpg"
-              alt="Inspiration has no Borders"
-              width="370"
-            />
-            <div class="card-set-text">
-              <h2 class="works-cart-title">Inspiration has no Borders</h2>
-              <p class="works-cart-text">Веб-сайт</p>
-            </div>
+            <a href="#">
+              <img
+                src="./images/inspirationhasnoborders.jpg"
+                alt="Inspiration has no Borders"
+                width="370"
+              />
+              <div class="card-set-text">
+                <h2 class="works-cart-title">Inspiration has no Borders</h2>
+                <p class="works-cart-text">Веб-сайт</p>
+              </div>
+            </a>
           </li>
           <li class="card-set-item">
-            <img
-              src="./images/limitededition.jpg"
-              alt="Издание Limited Edition"
-              width="370"
-            />
-            <div class="card-set-text">
-              <h2 class="works-cart-title">Издание Limited Edition</h2>
-              <p class="works-cart-text">Дизайн</p>
-            </div>
+            <a href="#">
+              <img
+                src="./images/limitededition.jpg"
+                alt="Издание Limited Edition"
+                width="370"
+              />
+              <div class="card-set-text">
+                <h2 class="works-cart-title">Издание Limited Edition</h2>
+                <p class="works-cart-text">Дизайн</p>
+              </div>
+            </a>
           </li>
           <li class="card-set-item">
-            <img src="./images/lab.jpg" alt="Проект LAB" width="370" />
-            <div class="card-set-text">
-              <h2 class="works-cart-title">Проект LAB</h2>
-              <p class="works-cart-text">Маркетинг</p>
-            </div>
+            <a href="#">
+              <img src="./images/lab.jpg" alt="Проект LAB" width="370" />
+              <div class="card-set-text">
+                <h2 class="works-cart-title">Проект LAB</h2>
+                <p class="works-cart-text">Маркетинг</p>
+              </div>
+            </a>
           </li>
           <li class="card-set-item">
-            <img
-              src="./images/growingbusiness.jpg"
-              alt="Growing Business"
-              width="370"
-            />
-            <div class="card-set-text">
-              <h2 class="works-cart-title">Growing Business</h2>
-              <p class="works-cart-text">Приложение</p>
-            </div>
+            <a href="#">
+              <img
+                src="./images/growingbusiness.jpg"
+                alt="Growing Business"
+                width="370"
+              />
+              <div class="card-set-text">
+                <h2 class="works-cart-title">Growing Business</h2>
+                <p class="works-cart-text">Приложение</p>
+              </div>
+            </a>
           </li>
         </ul>
       </section>
@@ -161,18 +181,61 @@
     <!-- footer -->
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo-link-footer"
-          ><span class="logo-link-part">Web</span>Studio</a
-        >
-        <address class="footer-address">
-          <p class="footer-location-text">г. Киев, пр-т Леси Украинки, 26</p>
-          <a href="mailto:info@example.com" class="footer-contacts"
-            >info@example.com</a
+        <div class="footer-contacts-wrapper">
+          <a href="./index.html" class="logo-link-footer"
+            ><span class="logo-link-part">Web</span>Studio</a
           >
-          <a href="tel:+380991111111" class="footer-contacts"
-            >+38 099 111 11 11</a
-          >
-        </address>
+          <address class="footer-address">
+            <p class="footer-location-text">г. Киев, пр-т Леси Украинки, 26</p>
+            <a href="mailto:info@example.com" class="footer-contacts"
+              >info@example.com</a
+            >
+            <a href="tel:+380991111111" class="footer-contacts"
+              >+38 099 111 11 11</a
+            >
+          </address>
+        </div>
+        <div class="footer-join">
+          <h3>Присоединяйтесь</h3>
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+              <a href="#" class="footer-social-link">
+                <svg width="44" height="44">
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-instagram-2"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="#" class="footer-social-link">
+                <svg width="44" height="44">
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-twitter-1"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="#" class="footer-social-link">
+                <svg width="44" height="44">
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-facebook-1"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="#" class="footer-social-link">
+                <svg width="44" height="44">
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-linkedin-1"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
