upd styles, html

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,21 +30,23 @@
           </ul>
           <ul class="header-contacts">
             <li>
-              <svg class="icon-mail" width="16" height="12">
-                <use href="./images/icons/symbol-defs.svg#icon-envelope"></use>
-              </svg>
               <a href="mailto:info@devstudio.com" class="header-contacts-item">
+                <svg class="icon-mail" width="16" height="12">
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-envelope"
+                  ></use>
+                </svg>
                 info@devstudio.com</a
               >
             </li>
             <li>
-              <svg class="icon-smartphone" width="10" height="16">
-                <use
-                  href="./images/icons/symbol-defs.svg#icon-smartphone"
-                ></use>
-              </svg>
-              <a href="tel:+380961111111" class="header-contacts-item"
-                >+38 096 111 11 11</a
+              <a href="tel:+380961111111" class="header-contacts-item">
+                <svg class="icon-smartphone" width="10" height="16">
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-smartphone"
+                  ></use>
+                </svg>
+                +38 096 111 11 11</a
               >
             </li>
           </ul>
@@ -73,7 +75,7 @@
         <ul class="card-set">
           <li class="card-set-item">
             <a href="#">
-              <img src="./images/technocryak.jpg" alt="Технокряк" width="370" />
+              <img src="./images/technocryak.jpg" alt="Технокряк" />
               <div class="card-set-text">
                 <h2 class="works-cart-title">Технокряк</h2>
                 <p class="works-cart-text">Веб-сайт</p>
@@ -85,7 +87,6 @@
               <img
                 src="./images/neworleangoldenstar.jpg"
                 alt="Постер New Orlean vs Golden Star"
-                width="370"
               />
               <div class="card-set-text">
                 <h2 class="works-cart-title">
@@ -97,11 +98,7 @@
           </li>
           <li class="card-set-item">
             <a href="">
-              <img
-                src="./images/seafood.jpg"
-                alt="Ресторан Seafood"
-                width="370"
-              />
+              <img src="./images/seafood.jpg" alt="Ресторан Seafood" />
               <div class="card-set-text">
                 <h2 class="works-cart-title">Ресторан Seafood</h2>
                 <p class="works-cart-text">Приложение</p>
@@ -110,7 +107,7 @@
           </li>
           <li class="card-set-item">
             <a href="#">
-              <img src="./images/prime.jpg" alt="Проект Prime" width="370" />
+              <img src="./images/prime.jpg" alt="Проект Prime" />
               <div class="card-set-text">
                 <h2 class="works-cart-title">Проект Prime</h2>
                 <p class="works-cart-text">Маркетинг</p>
@@ -119,7 +116,7 @@
           </li>
           <li class="card-set-item">
             <a href="#">
-              <img src="./images/boxes.jpg" alt="Проект Boxes" width="370" />
+              <img src="./images/boxes.jpg" alt="Проект Boxes" />
               <div class="card-set-text">
                 <h2 class="works-cart-title">Проект Boxes</h2>
                 <p class="works-cart-text">Приложение</p>
@@ -131,7 +128,6 @@
               <img
                 src="./images/inspirationhasnoborders.jpg"
                 alt="Inspiration has no Borders"
-                width="370"
               />
               <div class="card-set-text">
                 <h2 class="works-cart-title">Inspiration has no Borders</h2>
@@ -144,7 +140,6 @@
               <img
                 src="./images/limitededition.jpg"
                 alt="Издание Limited Edition"
-                width="370"
               />
               <div class="card-set-text">
                 <h2 class="works-cart-title">Издание Limited Edition</h2>
@@ -154,7 +149,7 @@
           </li>
           <li class="card-set-item">
             <a href="#">
-              <img src="./images/lab.jpg" alt="Проект LAB" width="370" />
+              <img src="./images/lab.jpg" alt="Проект LAB" />
               <div class="card-set-text">
                 <h2 class="works-cart-title">Проект LAB</h2>
                 <p class="works-cart-text">Маркетинг</p>
@@ -163,11 +158,7 @@
           </li>
           <li class="card-set-item">
             <a href="#">
-              <img
-                src="./images/growingbusiness.jpg"
-                alt="Growing Business"
-                width="370"
-              />
+              <img src="./images/growingbusiness.jpg" alt="Growing Business" />
               <div class="card-set-text">
                 <h2 class="works-cart-title">Growing Business</h2>
                 <p class="works-cart-text">Приложение</p>
