--- a/index.html
+++ b/index.html
@@ -29,21 +29,23 @@
           </ul>
           <ul class="header-contacts">
             <li>
-              <svg class="icon-mail" width="16" height="12">
-                <use href="./images/icons/symbol-defs.svg#icon-envelope"></use>
-              </svg>
               <a href="mailto:info@devstudio.com" class="header-contacts-item">
+                <svg class="icon-mail" width="16" height="12">
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-envelope"
+                  ></use>
+                </svg>
                 info@devstudio.com</a
               >
             </li>
             <li>
-              <svg class="icon-smartphone" width="10" height="16">
-                <use
-                  href="./images/icons/symbol-defs.svg#icon-smartphone"
-                ></use>
-              </svg>
-              <a href="tel:+380961111111" class="header-contacts-item"
-                >+38 096 111 11 11</a
+              <a href="tel:+380961111111" class="header-contacts-item">
+                <svg class="icon-smartphone" width="10" height="16">
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-smartphone"
+                  ></use>
+                </svg>
+                +38 096 111 11 11</a
               >
             </li>
           </ul>
@@ -58,7 +60,7 @@
           <h1 class="tagline-section-title">
             Эффективные решения для вашего бизнеса
           </h1>
-          <a href="" class="tagline-section-order">Заказать услугу</a>
+          <a href="#" class="tagline-section-order">Заказать услугу</a>
         </div>
       </section>
 
@@ -124,13 +126,13 @@
         <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="busy-section-list">
           <li>
-            <img src="./images/pc-graph.jpg" alt="Разработка" width="370" />
+            <img src="./images/pc-graph.jpg" alt="Разработка" />
           </li>
           <li>
-            <img src="./images/mob-pc.jpg" alt="Приложения" width="370" />
+            <img src="./images/mob-pc.jpg" alt="Приложения" />
           </li>
           <li>
-            <img src="./images/pocket-color.jpg" alt="Дизайн" width="370" />
+            <img src="./images/pocket-color.jpg" alt="Дизайн" />
           </li>
         </ul>
       </section>
@@ -141,196 +143,184 @@
           <h2 class="section-title">Наша команда</h2>
           <ul>
             <li class="team-section-item">
-              <img
-                src="./images/idemyanenko.jpg"
-                alt="Игорь Демьяненко"
-                width="270"
-              />
+              <img src="./images/idemyanenko.jpg" alt="Игорь Демьяненко" />
               <div class="team-section-text">
                 <h3 class="team-section-name">Игорь Демьяненко</h3>
                 <p class="team-section-position">Product Designer</p>
+                <ul class="team-social-list">
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg width="44" height="44">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg width="44" height="44">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg width="44" height="44">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg width="44" height="44">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
-              <ul class="team-social-list">
-                <li class="team-social-item">
-                  <a href="#" class="team-social-link">
-                    <svg width="44" height="44">
-                      <use
-                        href="./images/icons/symbol-defs.svg#icon-instagram-2"
-                      ></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-social-item">
-                  <a href="#" class="team-social-link">
-                    <svg width="44" height="44">
-                      <use
-                        href="./images/icons/symbol-defs.svg#icon-twitter-1"
-                      ></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-social-item">
-                  <a href="#" class="team-social-link">
-                    <svg width="44" height="44">
-                      <use
-                        href="./images/icons/symbol-defs.svg#icon-facebook-1"
-                      ></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-social-item">
-                  <a href="#" class="team-social-link">
-                    <svg width="44" height="44">
-                      <use
-                        href="./images/icons/symbol-defs.svg#icon-linkedin-1"
-                      ></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
             </li>
             <li class="team-section-item">
-              <img src="./images/orepina.jpg" alt="Ольга Репина" width="270" />
+              <img src="./images/orepina.jpg" alt="Ольга Репина" />
               <div class="team-section-text">
                 <h3 class="team-section-name">Ольга Репина</h3>
                 <p class="team-section-position">Frontend Developer</p>
+                <ul class="team-social-list">
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg width="44" height="44">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg width="44" height="44">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg width="44" height="44">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg width="44" height="44">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
-              <ul class="team-social-list">
-                <li class="team-social-item">
-                  <a href="#" class="team-social-link">
-                    <svg width="44" height="44">
-                      <use
-                        href="./images/icons/symbol-defs.svg#icon-instagram-2"
-                      ></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-social-item">
-                  <a href="#" class="team-social-link">
-                    <svg width="44" height="44">
-                      <use
-                        href="./images/icons/symbol-defs.svg#icon-twitter-1"
-                      ></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-social-item">
-                  <a href="#" class="team-social-link">
-                    <svg width="44" height="44">
-                      <use
-                        href="./images/icons/symbol-defs.svg#icon-facebook-1"
-                      ></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-social-item">
-                  <a href="#" class="team-social-link">
-                    <svg width="44" height="44">
-                      <use
-                        href="./images/icons/symbol-defs.svg#icon-linkedin-1"
-                      ></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
             </li>
             <li class="team-section-item">
-              <img
-                src="./images/ntarasov.jpg"
-                alt="Николай Тарасов"
-                width="270"
-              />
+              <img src="./images/ntarasov.jpg" alt="Николай Тарасов" />
               <div class="team-section-text">
                 <h3 class="team-section-name">Николай Тарасов</h3>
                 <p class="team-section-position">Marketing</p>
+                <ul class="team-social-list">
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg width="44" height="44">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg width="44" height="44">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg width="44" height="44">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg width="44" height="44">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
-              <ul class="team-social-list">
-                <li class="team-social-item">
-                  <a href="#" class="team-social-link">
-                    <svg width="44" height="44">
-                      <use
-                        href="./images/icons/symbol-defs.svg#icon-instagram-2"
-                      ></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-social-item">
-                  <a href="#" class="team-social-link">
-                    <svg width="44" height="44">
-                      <use
-                        href="./images/icons/symbol-defs.svg#icon-twitter-1"
-                      ></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-social-item">
-                  <a href="#" class="team-social-link">
-                    <svg width="44" height="44">
-                      <use
-                        href="./images/icons/symbol-defs.svg#icon-facebook-1"
-                      ></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-social-item">
-                  <a href="#" class="team-social-link">
-                    <svg width="44" height="44">
-                      <use
-                        href="./images/icons/symbol-defs.svg#icon-linkedin-1"
-                      ></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
             </li>
             <li class="team-section-item">
-              <img
-                src="./images/mermakov.jpg"
-                alt="Михаил Ермаков"
-                width="270"
-              />
+              <img src="./images/mermakov.jpg" alt="Михаил Ермаков" />
               <div class="team-section-text">
                 <h3 class="team-section-name">Михаил Ермаков</h3>
                 <p class="team-section-position">UI Designer</p>
+                <ul class="team-social-list">
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg width="44" height="44">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg width="44" height="44">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg width="44" height="44">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg width="44" height="44">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
-              <ul class="team-social-list">
-                <li class="team-social-item">
-                  <a href="#" class="team-social-link">
-                    <svg width="44" height="44">
-                      <use
-                        href="./images/icons/symbol-defs.svg#icon-instagram-2"
-                      ></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-social-item">
-                  <a href="#" class="team-social-link">
-                    <svg width="44" height="44">
-                      <use
-                        href="./images/icons/symbol-defs.svg#icon-twitter-1"
-                      ></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-social-item">
-                  <a href="#" class="team-social-link">
-                    <svg width="44" height="44">
-                      <use
-                        href="./images/icons/symbol-defs.svg#icon-facebook-1"
-                      ></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="team-social-item">
-                  <a href="#" class="team-social-link">
-                    <svg width="44" height="44">
-                      <use
-                        href="./images/icons/symbol-defs.svg#icon-linkedin-1"
-                      ></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
             </li>
           </ul>
         </div>
@@ -415,14 +405,14 @@
           <a href="./index.html" class="logo-link-footer"
             ><span class="logo-link-part">Web</span>Studio</a
           >
-          <address class="footer-address">
+          <address>
             <p class="footer-location-text">г. Киев, пр-т Леси Украинки, 26</p>
             <a href="mailto:info@example.com" class="footer-contacts"
-              >info@example.com</a
-            >
+              >info@example.com
+            </a>
             <a href="tel:+380991111111" class="footer-contacts"
-              >+38 099 111 11 11</a
-            >
+              >+38 099 111 11 11
+            </a>
           </address>
         </div>
         <div class="footer-join">
