--- a/portfolio.html
+++ b/portfolio.html
@@ -176,14 +176,14 @@
           <a href="./index.html" class="logo-link-footer"
             ><span class="logo-link-part">Web</span>Studio</a
           >
-          <address class="footer-address">
+          <address>
             <p class="footer-location-text">г. Киев, пр-т Леси Украинки, 26</p>
             <a href="mailto:info@example.com" class="footer-contacts"
-              >info@example.com</a
-            >
+              >info@example.com
+            </a>
             <a href="tel:+380991111111" class="footer-contacts"
-              >+38 099 111 11 11</a
-            >
+              >+38 099 111 11 11
+            </a>
           </address>
         </div>
         <div class="footer-join">
